syntax = "proto3";

package messenger;

service Messenger {
  rpc SendMessage (Message) returns (MessageResponse);
  rpc ReceiveMessages (MessengerRequest) returns (stream Message);
}

message MessengerRequest {
  string nickname = 1;
}

message Message {
  string sender = 1;
  string recipient = 2;
  string content = 3;
  int64 deleteTimestamp = 4;
}

message MessageResponse {
  bool success = 1;
}